--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -25,7 +25,7 @@
     "View/Manage-Forms": "View/Manage Forms",
     "View-Create-Edit-Profile": "View, Create, Edit Profile",
     "Session-Report-Assembly": "Session Report Assembly",
-    "Recording-by-Distributors": "Recording by Distributors",
+    "Recording-by-Distributors": "Recordings by Distributors",
     "Subscription-Management": "Subscription Management",
     "Group-Subscription-Management": "Group Subscription Management",
     "Logout": "Logout",
@@ -33,11 +33,12 @@
     "Reset": "Reset",
     "Active": "Active",
     "Inactive": "Inactive",
-    "Group": "Group",
-    "Home-Work-Session": "Home Work Session",
-    "Choose-a-trainer": "Choose a trainer",
-    "Choose-a-client": "Choose a client",
-    "Choose-a-session": "Choose a session",
+    "Group": "Select GROUP",
+    "Home-Work-Session": "Homework",
+    "Standard": "Standard",
+    "Choose-a-trainer": "Choose a Trainer",
+    "Choose-a-client": "Choose a Client",
+    "Choose-a-session": "Choose a Session",
     "Step-1": "Step 1",
     "Step": "Step",
     "Create-&-Save-a-Session-Data-Report": "Create & Save a Session Data Report",
