--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -20,7 +20,7 @@
     "Country": "Country",
     "Create-Data-Report": "Create Data Report",
     "View-&-Edit-Data-Report": "View & Edit Data Report",
-    "View-PDF-Report": "View PDF Report",
+    "View-PDF-Report": "View PDFs of Reports",
     "View-Live-Session-Info": "View Live Session Info",
     "View/Manage-Forms": "View/Manage Forms",
     "View-Create-Edit-Profile": "View, Create, Edit Profile",
