--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -98,5 +98,58 @@
     "Status": "Status",
     "Actions": "Actions",
     "Login-to-CapnoTrainer-Cloud-Database": "Login to CapnoTrainer® Cloud Database",
-    "Email-Address": "Email Address"
+    "Email-Address": "Email Address",
+    "Trainer-box":"TRAINERS",
+    "Create-Session-Report": "Create-Session-Report",
+    "View/Edit/Delete/Download Session Report": "View/Edit/Delete/Download Session Report",
+    "a-SUMMARY-at-the-top-of-the-Report": "(1) a SUMMARY at the top of the Report",
+    "a-DESCRIPTION-at-the-bottom-of-each-SESSION-IMAGE-and": "(2) a DESCRIPTION at the bottom of each SESSION IMAGE, and",
+    "a-DESCRIPTION-at-the-bottom-of-each-DATA-REPORT-GRAPH": "(3) a DESCRIPTION at the bottom of each DATA REPORT GRAPH.",
+    "(a-)a-SUMMARY-at-the-top-of-the-Report": "(1) a SUMMARY at the top of the Report",
+    "Create/Save-Report": "Create/Save Report",
+    "Clear-Selections": "Clear Selections",
+    "The-following": "The following are a list of FORMS completed by you and/or your Client. Check off the Forms you wish to include in the Report.",
+    "trainer": "Trainer",
+    "Client": "Client",
+    "Date": "Date",
+    "Name-of-Report": "Name of Report",
+    "Summary-of-Report": "Summary of Report",
+    "Live-Session-Notes": "Live Session Notes",
+    "Report-Notes": "Report Notes",
+    "Completed-Forms": "Completed Forms",
+    "Session": "Session",
+    "Report-Title": "Report Title",
+    "Date-Created": "Date Created",
+    "CLIENTS": "CLIENTS",
+    "SESSIONS": "SESSIONS",
+    "choose-slient-sessions-p": "Choose a Client and a Session.  The Dashboard will activate the relevant options based on your selections.",
+    "Cloud-Database-Dashboard": "Cloud Database Dashboard",
+    "Database-Dashboard": "Database Dashboard",
+    "Choose-Signals":"Choose Signals",
+    "Choose-Sessions":"Choose Sessions",
+    "Create": "Create",
+    "Back": "Back",
+    "Demo-Data-Reports": "Demo Data Reports",
+    "Single-Session": "Single Session",
+    "Multi-Session": "Multi Session",
+    "Group-Session": "Group Session",
+    "Preconfigured-Report": "Preconfigured Report",
+    "Pre-configured-Group-Reports":"Pre-configured Group Reports",
+    "Sesseion-Report": "Sesseion Report",
+    "Single": "Single",
+    "Multi": "Multi",
+    "group": "Group",
+    "homework": "Homework",
+    "Report-Name": "Report Name",
+    "Created-Date-Time": "Created Date Time",
+    "Session-Zoom-Recording": "Session Zoom Recording",
+    "Close": "Close",
+    "Add-link": "Add link",
+    "Downloading": "Downloading",
+    "Blank-forms": "Blank forms",
+    "Form-Name": "Form Name",
+    "Upload-Client-Form": "Upload Client Form",
+    "Upload-PDF-Form": "Upload PDF Form",
+    "Submit": "Submit",
+    "Upload-Trainer-Form": "Upload Trainer Form"
   }
