--- a/src/components/component/language/fr/FrenchLanguage.json
+++ b/src/components/component/language/fr/FrenchLanguage.json
@@ -97,5 +97,58 @@
     "Status": "Statut",
     "Actions": "Actions",
     "Login-to-CapnoTrainer-Cloud-Database": "Connectez-vous à la base de données CapnoTrainer® Cloud",
-    "Email-Address": "Adresse e-mail"
+    "Email-Address": "Adresse e-mail",
+    "Trainer-box":"FORMATRICES",
+    "View/Edit/Delete/Download Session Report": "Afficher/modifier/supprimer/télécharger le rapport de session",
+    "a-SUMMARY-at-the-top-of-the-Report": "(1) un RÉSUMÉ en haut du Rapport",
+    "a-DESCRIPTION-at-the-bottom-of-each-SESSION-IMAGE-and": "(2) une DESCRIPTION au bas de chaque IMAGE DE SESSION, et",
+    "a-DESCRIPTION-at-the-bottom-of-each-DATA-REPORT-GRAPH": "(3) une DESCRIPTION au bas de chaque GRAPHIQUE DE RAPPORT DE DONNÉES.",
+    "(a-)a-SUMMARY-at-the-top-of-the-Report": "(1) un RÉSUMÉ en haut du rapport",
+    "Create/Save-Report": "Créer/Enregistrer un rapport",
+    "Clear-Selections": "Effacer les sélections",
+    "The-following": "Voici une liste des FORMULAIRES remplis par vous et/ou votre Client. Cochez les formulaires que vous souhaitez inclure dans le rapport.",
+    "trainer": "Entraîneur",
+    "Client": "Client",
+    "Date": "Date",
+    "Name-of-Report": "Nom du rapport",
+    "Summary-of-Report": "Résumé du rapport",
+    "Live-Session-Notes": "Notes de session en direct",
+    "Report-Notes": "Remarques sur le rapport",
+    "Completed-Forms": "Formulaires remplis",
+    "Session": "Session",
+    "Report-Title": "Titre du rapport",
+    "Date-Created": "date créée",
+    "CLIENTS": "CLIENTES",
+    "SESSIONS": "SÉANCES",
+    "choose-slient-sessions-p": "Choisissez un client et une session. Le tableau de bord activera les options pertinentes en fonction de vos sélections.",
+    "Cloud-Database-Dashboard": "Tableau de bord de la base de données du cloud d'administration",
+    "Database-Dashboard": "Tableau de bord de la base de données",
+    "Choose-Signals":"Choisissez les signaux",
+    "Choose-Sessions":"Choisissez les séances",
+    "Create": "Créer",
+    "Back": "Retour",
+    "Demo-Data-Reports": "Rapports de données de démonstration",
+    "Single-Session": "Séance unique",
+    "Multi-Session": "Multi-session",
+    "Group-Session": "Séance de groupe",
+    "Preconfigured-Report": "Rapport préconfiguré",
+    "Pre-configured-Group-Reports":"Rapports de groupe préconfigurés",
+    "Sesseion-Report": "Rapport de session",
+    "Single": "Seule",
+    "Multi": "Multi",
+    "group": "Groupe",
+    "homework": "Devoirs",
+    "Report-Name": "Nom du rapport",
+    "Created-Date-Time": "Date de création Heure",
+    "Session-Zoom-Recording": "Enregistrement Zoom de session",
+    "Close": "proche",
+    "Add-link": "Ajouter un lien",
+    "Downloading": "Téléchargement",
+    "Blank-forms": "Formulaires vierges",
+    "Form-Name": "Nom de forme",
+    "Upload-Client-Form": "Télécharger le formulaire client",
+    "Upload-PDF-Form": "Télécharger le formulaire PDF",
+    "Submit": "Soumettre",
+    "Upload-Trainer-Form": "Téléchargez le formulaire du formateur"
+
   }
