--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -133,7 +133,7 @@
     "Single-Session": "Single Session",
     "Multi-Session": "Multi Session",
     "Group-Session": "Group Session",
-    "Preconfigured-Report": "Preconfigured Report",
+    "Preconfigured-Report": "Preconfigured Reports",
     "Pre-configured-Group-Reports":"Pre-configured Group Reports",
     "Sesseion-Report": "Sesseion Report",
     "Single": "Single",
