--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -1,11 +1,11 @@
 {
-    "edit-profile": "Edit Profile",
+    "edit-profile": "View/Edit My Profile",
     "no": "No",
     "yes": "Yes",
     "I-will-be-working-with-clients": "I will be working with clients.",
     "There-will-be-other-trainers-seeing-clients-besides-me": "There will be other trainers seeing clients besides me.",
     "I-will-be-doing-groupwork-with-multiple-CapnoTrainers": "I will be doing groupwork with multiple CapnoTrainers.",
-    "I-purchased-the-CapnoTrainer-HRV-P6.0-option": "I purchased the CapnoTrainer HRV P6.0 option.",
+    "I-purchased-the-CapnoTrainer-HRV-P6.0-option": "I will be using an HRV device with my CapnoTrainer.",
     "Auto-update-Computer-Software": "Auto-update Computer Software.",
     "First-Name": "First Name:",
     "Last-Name": "Last Name:",
@@ -64,8 +64,8 @@
     "Upload-Completed-Trainer-Forms": "Upload Completed Trainer Forms",
     "View-Completed-Client-Forms": "View Completed Client Forms",
     "View-Completed-Trainer-Forms": "View Completed Trainer Forms",
-    "View-Homework-Assignment": "View Homework Assignment",
-    "Upload-Homework-Assignment": "Upload Homework Assignment",
+    "View-Homework-Assignment": "View Completed Homework Assignment",
+    "Upload-Homework-Assignment": "Upload Completed Homework Assignment",
     "New-Client": "New Client",
     "Edit-Client": "Edit Client",
     "New-Trainer": "New Trainer",
@@ -100,7 +100,7 @@
     "Login-to-CapnoTrainer-Cloud-Database": "Login to CapnoTrainer® Cloud Database",
     "Email-Address": "Email Address",
     "Trainer-box":"TRAINERS",
-    "Create-Session-Report": "Create-Session-Report",
+    "Create-Session-Report": "Create Session Assembly Report",
     "View/Edit/Delete/Download Session Report": "View/Edit/Delete/Download Session Report",
     "a-SUMMARY-at-the-top-of-the-Report": "(1) a SUMMARY at the top of the Report",
     "a-DESCRIPTION-at-the-bottom-of-each-SESSION-IMAGE-and": "(2) a DESCRIPTION at the bottom of each SESSION IMAGE, and",
