--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -5,7 +5,7 @@
     "I-will-be-working-with-clients": "I will be working with clients.",
     "There-will-be-other-trainers-seeing-clients-besides-me": "There will be other trainers seeing clients besides me.",
     "I-will-be-doing-groupwork-with-multiple-CapnoTrainers": "I will be doing groupwork with multiple CapnoTrainers.",
-    "I-purchased-the-CapnoTrainer-HRV-P6.0-option": "I will be using an HRV device with my CapnoTrainer.",
+    "I-purchased-the-CapnoTrainer-HRV-P6.0-option": "I will be using an HRV device with my CapnoTrainer®.",
     "Auto-update-Computer-Software": "Auto-update Computer Software.",
     "First-Name": "First Name:",
     "Last-Name": "Last Name:",
@@ -71,9 +71,9 @@
     "New-Trainer": "New Trainer",
     "Edit-Trainer": "Edit Trainer",
     "New-Group": "New Group",
-    "Edit-Group": "Edit Group",
+    "Edit-Group": "View Group",
     "Edit-My-Profile": "Edit My Profile",
-    "View/Edit-Hardware-Profile": "View/Edit Hardware Profile",
+    "View/Edit-Hardware-Profile": "View Hardware Profile",
     "Create Session Report": "Create Session Report",
     "View/Edit/Delete/Download-Session-Report": "View/Edit/Delete/Download Session Report",
     "Session-Assembly-Reports": "Session Assembly Reports",
