--- a/src/components/component/language/fr/FrenchLanguage.json
+++ b/src/components/component/language/fr/FrenchLanguage.json
@@ -5,7 +5,7 @@
     "I-will-be-working-with-clients": "Je travaillerai avec des clients.",
     "There-will-be-other-trainers-seeing-clients-besides-me": "Il y aura d'autres formateurs qui verront des clients en plus de moi.",
     "I-will-be-doing-groupwork-with-multiple-CapnoTrainers": "Je vais faire du travail de groupe avec plusieurs CapnoTrainers.",
-    "I-purchased-the-CapnoTrainer-HRV-P6.0-option": "J'ai acheté l'option CapnoTrainer HRV P6.0.",
+    "I-purchased-the-CapnoTrainer-HRV-P6.0-option": "J'ai acheté l'option CapnoTrainer® HRV P6.0.",
     "Auto-update-Computer-Software": "Mise à jour automatique du logiciel informatique.",
     "First-Name": "Prénom:",
     "Last-Name": "Nom de famille:",
