--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -24,7 +24,7 @@
     "View-Live-Session-Info": "View Live Session Info",
     "View/Manage-Forms": "View/Manage Forms",
     "View-Create-Edit-Profile": "View, Create, Edit Profile",
-    "Session-Report-Assembly": "Session Report Assembly",
+    "Session-Report-Assembly": "Case Report Assembly",
     "Recording-by-Distributors": "Recordings by Distributors",
     "Subscription-Management": "Subscription Management",
     "Group-Subscription-Management": "Group Subscription Management",
@@ -76,8 +76,9 @@
     "View/Edit-Hardware-Profile": "View Hardware Profile",
     "Create Session Report": "Create Session Report",
     "View/Edit/Delete/Download-Session-Report": "View/Edit/Delete/Download Session Report",
-    "Session-Assembly-Reports": "Session Assembly Reports",
-    "assembly-report-p": "You may choose to assemble a SESSION REPORT consisting of any or all of the OPTIONS listed below.  Check off the options you wish to include in the Report by clicking on the box in front of each option. These options will appear in the Report in the order shown below. If you do not place a check mark  in the box in front of an option, it will not appear in the Report. You may choose to write additional notes in the Report as follows:",
+    "Session-Assembly-Reports": "Session Case Reports",
+    "assembly-report-p": "You may choose to assemble a SESSION REPORT consisting of any or all of the OPTIONS listed below.  Check off the options you wish to include in the Report by clicking on the box in front of each option. These options will appear in the Report in the order shown below. If you do not place a check mark  in the box in front of an option, it will not appear in the Report.",
+    "assembly-report-p2": "After clicking 'ASSEMBLE SESSION REPORT.' but before saving it as a PDF file, you may also choose to write a summary of the Session Report and/or a description of each saved session image and data report image where indicated at the bottom of each image.:",
     "Auto-software-update": "Auto software update:",
     "Auto-subscription-renewal-by-credit-card": "Auto subscription renewal by credit card:",
     "You-will-receive-a-notification-30-days-before-expiration-of-your-subscription": "You will receive a notification 30 days before expiration of your subscription",
@@ -100,23 +101,25 @@
     "Login-to-CapnoTrainer-Cloud-Database": "Login to CapnoTrainer® Cloud Database",
     "Email-Address": "Email Address",
     "Trainer-box":"TRAINERS",
-    "Create-Session-Report": "Create Session Assembly Report",
-    "View/Edit/Delete/Download Session Report": "View/Edit/Delete/Download Session Report",
+    "Create-Session-Report": "Create Session Case Report",
+    "View/Edit/Delete/Download Session Report": "View/Edit/Delete/Download Session Case Report",
     "a-SUMMARY-at-the-top-of-the-Report": "(1) a SUMMARY at the top of the Report",
     "a-DESCRIPTION-at-the-bottom-of-each-SESSION-IMAGE-and": "(2) a DESCRIPTION at the bottom of each SESSION IMAGE, and",
     "a-DESCRIPTION-at-the-bottom-of-each-DATA-REPORT-GRAPH": "(3) a DESCRIPTION at the bottom of each DATA REPORT GRAPH.",
     "(a-)a-SUMMARY-at-the-top-of-the-Report": "(1) a SUMMARY at the top of the Report",
-    "Create/Save-Report": "Create/Save Report",
+    "Create/Save-Report": "Assemble Session Case Report",
     "Clear-Selections": "Clear Selections",
     "The-following": "The following are a list of FORMS completed by you and/or your Client. Check off the Forms you wish to include in the Report.",
     "trainer": "Trainer",
     "Client": "Client",
     "Date": "Date",
     "Name-of-Report": "Name of Report",
+    "Name-of-Assembly-Report": "Name of Session Case Report",
     "Summary-of-Report": "Summary of Report",
-    "Live-Session-Notes": "Live Session Notes",
-    "Report-Notes": "Report Notes",
-    "Completed-Forms": "Completed Forms",
+    "Summary-of-Assembly-Report": "Summary of Session Case Report",
+    "Live-Session-Notes": " LIVE SESSION NOTES",
+    "Report-Notes": "DATA REPORT NOTES",
+    "Completed-Forms": "COMPLETED FORMS",
     "Session": "Session",
     "Report-Title": "Report Title",
     "Date-Created": "Date Created",
