--- a/src/components/component/language/fr/FrenchLanguage.json
+++ b/src/components/component/language/fr/FrenchLanguage.json
@@ -77,6 +77,7 @@
     "View/Edit/Delete/Download-Session-Report": "Afficher/modifier/supprimer/télécharger le rapport de session",
     "Session-Assembly-Reports": "Rapports de l'assemblée de session",
     "assembly-report-p": "Vous pouvez choisir d'assembler un RAPPORT DE SESSION composé de l'une ou de toutes les OPTIONS énumérées ci-dessous. Cochez les options que vous souhaitez inclure dans le rapport en cliquant sur la case devant chaque option. Ces options apparaîtront dans le rapport dans l'ordre indiqué ci-dessous. Si vous ne cochez pas dans la case devant une option, elle n'apparaîtra pas dans le rapport. Vous pouvez choisir d'écrire d'autres note dans le rapport comme suit :",
+    "assembly-report-p2": "After clicking 'ASSEMBLE SESSION REPORT.' but before saving it as a PDF file, you may also choose to write a summary of the Session Report and/or a description of each saved session image and data report image where indicated at the bottom of each image.:",
     "Auto-software-update": "Mise à jour automatique du logiciel:",
     "Auto-subscription-renewal-by-credit-card": "Renouvellement automatique de l'abonnement par carte bancaire:",
     "You-will-receive-a-notification-30-days-before-expiration-of-your-subscription": "Vous recevrez une notification 30 jours avant l'expiration de votre abonnement",
@@ -112,6 +113,8 @@
     "Date": "Date",
     "Name-of-Report": "Nom du rapport",
     "Summary-of-Report": "Résumé du rapport",
+    "Summary-of-Assembly-Report": "Summary of Assembly Report",
+    "Name-of-Assembly-Report": "Name of Assembly Report",
     "Live-Session-Notes": "Notes de session en direct",
     "Report-Notes": "Remarques sur le rapport",
     "Completed-Forms": "Formulaires remplis",
