--- a/src/components/component/language/en/EnglishLanguage.json
+++ b/src/components/component/language/en/EnglishLanguage.json
@@ -81,9 +81,10 @@
     "assembly-report-p2": "After clicking 'ASSEMBLE SESSION REPORT.' but before saving it as a PDF file, you may also choose to write a summary of the Session Report and/or a description of each saved session image and data report image where indicated at the bottom of each image.:",
     "Auto-software-update": "Auto software update:",
     "Auto-subscription-renewal-by-credit-card": "Auto subscription renewal by credit card:",
-    "You-will-receive-a-notification-30-days-before-expiration-of-your-subscription": "You will receive a notification 30 days before expiration of your subscription",
-    "take-note-that-your-credit-card-will-be-charged-on-the-due-date": "(1) take note that your credit card will be charged on the due date, OR",
-    "make-payment-before-the-due-date-which-you-can-do-by-clicking-on-RENEWAL": "(2) make payment before the due date, which you can do by clicking on RENEWAL.",
+    "You-will-receive-a-notification-30-days-before-expiration-of-your-subscription": "If you choose to auto-renew, you will receive two emails, 30 days and 10 days before your expiration date, with a link for payment by credit card or PayPal.",
+    "take-note-that-your-credit-card-will-be-charged-on-the-due-date": "(1) Your software will no longer update.",
+    "make-payment-before-the-due-date-which-you-can-do-by-clicking-on-RENEWAL": "(2)Your access to live tech support will terminate.",
+    "instruction3": "(3)You will no longer be able to save data to your Cloud account, although you will continue to have access to your existing data.",
     "Click-here-to": "Click here to",
     "now":"now",
     "RENEW": "RENEW",
